RESOLVED FIXED196141
[css-grid] Fix grid container baseline alignment for orthogonal items
https://bugs.webkit.org/show_bug.cgi?id=196141
Summary [css-grid] Fix grid container baseline alignment for orthogonal items
Manuel Rego Casasnovas
Reported 2019-03-22 04:19:14 PDT
[css-grid] Fix grid container baseline alignment for orthogonal items
Attachments
Patch (13.55 KB, patch)
2019-03-22 04:20 PDT, Manuel Rego Casasnovas
no flags
Archive of layout-test-results from ews106 for mac-highsierra-wk2 (2.96 MB, application/zip)
2019-03-22 06:19 PDT, EWS Watchlist
no flags
Patch (13.55 KB, patch)
2019-03-22 13:36 PDT, Manuel Rego Casasnovas
no flags
Archive of layout-test-results from ews204 for win-future (12.86 MB, application/zip)
2019-03-22 15:38 PDT, EWS Watchlist
no flags
Manuel Rego Casasnovas
Comment 1 2019-03-22 04:20:07 PDT
EWS Watchlist
Comment 2 2019-03-22 06:19:13 PDT
Comment on attachment 365708 [details] Patch Attachment 365708 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/11612508 New failing tests: imported/w3c/web-platform-tests/mediacapture-record/MediaRecorder-constructor.html
EWS Watchlist
Comment 3 2019-03-22 06:19:15 PDT
Created attachment 365718 [details] Archive of layout-test-results from ews106 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Javier Fernandez
Comment 4 2019-03-22 06:21:37 PDT
Comment on attachment 365708 [details] Patch Looks good to me. The red bot seems unrelated, but please, check it out before landing.
Manuel Rego Casasnovas
Comment 5 2019-03-22 13:34:35 PDT
(In reply to Javier Fernandez from comment #4) > Looks good to me. The red bot seems unrelated, but please, check it out > before landing. It seems totally unrelated to this patch, but I'll reupload the test to verify it in EWS again. Thanks for the review.
Manuel Rego Casasnovas
Comment 6 2019-03-22 13:36:08 PDT
EWS Watchlist
Comment 7 2019-03-22 15:38:30 PDT
Comment on attachment 365755 [details] Patch Attachment 365755 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/11617302 New failing tests: animations/resume-after-page-cache.html
EWS Watchlist
Comment 8 2019-03-22 15:38:41 PDT
Created attachment 365766 [details] Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
Manuel Rego Casasnovas
Comment 9 2019-03-25 00:21:00 PDT
Comment on attachment 365755 [details] Patch Again the failure seems totally unrelated, and win and wincairo EWS was green in the first patch (that is exactly the same than the second one). So let's land this.
WebKit Commit Bot
Comment 10 2019-03-25 00:47:00 PDT
Comment on attachment 365755 [details] Patch Clearing flags on attachment: 365755 Committed r243432: <https://trac.webkit.org/changeset/243432>
WebKit Commit Bot
Comment 11 2019-03-25 00:47:02 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2019-03-25 00:47:26 PDT
Note You need to log in before you can comment on or make changes to this bug.