[css-grid] Fix grid container baseline alignment for orthogonal items https://bugs.webkit.org/show_bug.cgi?id=196141

Reviewed by Javier Fernandez.

LayoutTests/imported/w3c:

Imported test from WPT. This patch is making some of the test cases pass but not all.
Some are still failing in WebKit as it never uses the central baseline on vertical writing modes (bug #94410),
also "text-orientation" is not supported yet in WebKit (bug #196139),
even the prefixed version "-webkit-text-orientation" doesn't fix anything in this test case.

* web-platform-tests/css/css-grid/alignment/grid-container-baseline-001-expected.txt: Added.
* web-platform-tests/css/css-grid/alignment/grid-container-baseline-001.html: Added.
* web-platform-tests/css/css-grid/alignment/w3c-import.log:

Source/WebCore:

Grid container baseline was wrongly computed when done in reference to an orthogonal item.

Test: imported/w3c/web-platform-tests/css/css-grid/alignment/grid-container-baseline-001.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::firstLineBaseline const): Simple change to use logicalTopForChild()
so it takes into account grid container and item writing modes.


Canonical link: https://commits.webkit.org/210487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243432 268f45cc-cd09-0410-ab3c-d52691b4dbfc